Extended the applications search API to now be able to search applications by names of functions assigned to the applications.
