# src/za.co.grindrodbank.a3s/AbstractApiControllers/ApplicationApi.cs
@@ -39,6 +39,7 @@ namespace za.co.grindrodbank.a3s.AbstractApiControllers
         /// <param name="page">The page to view.</param>
         /// <param name="size">The size of a page.</param>
         /// <param name="filterName">A search query filter on the application&#39;s name.</param>
+        /// <param name="filterFunctionName">A search query filter on the name of a function assigned to an application.</param>
         /// <param name="orderBy">a comma separated list of fields in their sort order. Ascending order is assumed. Append &#39;_desc&#39; after a field to indicate descending order. Supported fields. &#39;name&#39;.</param>
         /// <response code="200">OK</response>
         /// <response code="400">Bad Request.</response>
@@ -55,6 +56,6 @@ namespace za.co.grindrodbank.a3s.AbstractApiControllers
         [ProducesResponseType(statusCode: 403, type: typeof(ErrorResponse))]
         [ProducesResponseType(statusCode: 404, type: typeof(ErrorResponse))]
         [ProducesResponseType(statusCode: 500, type: typeof(ErrorResponse))]
-        public abstract Task<IActionResult> ListApplicationsAsync([FromQuery]int page, [FromQuery][Range(1, 20)]int size, [FromQuery][StringLength(255, MinimumLength=0)]string filterName, [FromQuery]string orderBy);
+        public abstract Task<IActionResult> ListApplicationsAsync([FromQuery]int page, [FromQuery][Range(1, 1000)]int size, [FromQuery][StringLength(255, MinimumLength=0)]string filterName, [FromQuery][StringLength(255, MinimumLength=0)]string filterFunctionName, [FromQuery]string orderBy);
     }
 }
